<resources>
    <string name="app_name">Temperature Regulator</string>
    <string name="heat">Heat</string>
    <string name="vacuum">Vacuum</string>
    <string name="refresh">Refresh</string>
    <string name="name">Name</string>
    <string name="steps">Steps</string>
    <string name="add_step">Add Step</string>
    <string name="time_min">Time(min)</string>
    <string name="temp_c">Temp(°C)</string>
    <string name="main_menu">Main Menu</string>
    <string name="shutdown">Shutdown</string>
    <string name="restart">Restart</string>
    <string name="description">Description</string>
    <string name="upload">Send to PI</string>
    <string name="delete">Delete</string>
    <string name="degree_symbol">\u00B0</string>

    <string name="image">Image</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string-array name="alert_titles">
        <item>Heat</item>
        <item>Vacuum</item>
        <item>Program</item>
    </string-array>

    <string-array name="time_array">
        <item>30 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
        <item>4 hrs</item>
        <item>5 hrs</item>
        <item>6 hrs</item>
    </string-array>
</resources>