<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/d_menu_item"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/main_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/shutdown"
                android:title="@string/shutdown"
                android:icon="@drawable/ic_shutdown"/>
            <item
                android:id="@+id/restart"
                android:title="@string/restart"
                android:icon="@drawable/ic_restart"/>
            <item
                android:id="@+id/upload"
                android:title="@string/upload"
                android:icon="@drawable/ic_baseline_upload_24"/>
        </menu>
    </item>
</menu>