<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/program_name"
        android:text="@string/name"
        android:textSize="@dimen/text_l"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/program_name"
        android:id="@+id/program_desc"
        android:text="@string/description"
        android:textSize="@dimen/text_m"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ib_add_step"
        app:layout_constraintBottom_toBottomOf="@id/ib_add_step"
        android:id="@+id/tv_steps"
        android:text="@string/steps"
        android:textSize="@dimen/text_m"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_add_step"
        android:layout_marginTop="10dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="invisible"
        android:background="@drawable/ic_baseline_add_circle_24"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_steps"
        app:layout_constraintTop_toBottomOf="@id/program_desc"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/ib_add_step"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/add_step" />


</androidx.constraintlayout.widget.ConstraintLayout>