<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step_id"
            android:textSize="@dimen/text_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_time"
            android:text="@string/time_min"
            android:textSize="@dimen/text_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/time"
            app:layout_constraintBottom_toBottomOf="@id/time"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:minWidth="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toBottomOf="@id/step_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_temp"
            android:text="@string/temp_c"
            android:textSize="@dimen/text_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/temp"
            app:layout_constraintBottom_toBottomOf="@id/temp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp"
            android:minWidth="75dp"
            android:inputType="number"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/tv_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_vacuum"
            android:text="@string/vacuum"
            android:textSize="@dimen/text_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sw_vacuum"
            app:layout_constraintBottom_toBottomOf="@id/sw_vacuum"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_vacuum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/temp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>